сквозная асинхронность и события подготовки теста